Fix some weird video scaling issues
By making scrollbar 1px wider, thus squeezing the video element into proper scaling.
http://pasteboard.co/1hTZGeda.png

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,19 +13,19 @@
 
 ::-webkit-scrollbar-track
 {
-	background-color: rgba(255,255,255,0.3);
+  background-color: rgba(255,255,255,0.3);
   border-radius:0px;
 }
 
 ::-webkit-scrollbar
 {
-	width: 4px;
+  width: 5px;
   border-radius:0px;
 }
 
 ::-webkit-scrollbar-thumb
 {
-	background-color: #3E3E3E;
+  background-color: #3E3E3E;
   border-radius:0px;
 }
 
